--- a/exercises/hello-spring-boot/src/main/resources/application.properties
+++ b/exercises/hello-spring-boot/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.application.name=hello-spring-boot
 logging.level.org.springframework=debug
 spring.profiles.active=dev
+
+currency-service.url=default.ayush953.com
+currency-service.username=defaultUsername
+currency-service.key=default
