--- a/exercises/hello-spring-boot/src/main/resources/application-dev.properties
+++ b/exercises/hello-spring-boot/src/main/resources/application-dev.properties
@@ -1,1 +1,5 @@
 logging.level.org.springframework=trace
+
+currency-service.url=dev.ayush953.com
+currency-service.username=devUsername
+currency-service.key=dev
