spring boot actuators

--- a/exercises/hello-spring-boot/src/main/resources/application.properties
+++ b/exercises/hello-spring-boot/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.profiles.active=dev
 currency-service.url=default.ayush953.com
 currency-service.username=defaultUsername
 currency-service.key=default
+
+management.endpoints.web.exposure.include=health,metrics
