--- a/projects/first-web-app/src/main/resources/application.properties
+++ b/projects/first-web-app/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=first-web-app
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
+logging.level.com.ayush953.first_web_app=debug
